# PyTaxonomies

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Pipfile  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: nosetests.yml  release.yml
notebooks/: create_n_edit.ipynb
pytaxonomies/: __init__.py  api.py  script.py
tests/: tests.py
website/: REQUIREMENTS.txt  __init__.py  update_thirdparty.sh
website/templates/: main.html  search.html  taxonomies.html  taxonomy.html
