[tool.poetry]
name = "pytaxonomies"
version = "0.7"
description = "Python API for the taxonomies."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "BSD-3-Clause"
repository = "https://github.com/MISP/PyTaxonomies"

readme = "README.md"

classifiers=[
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Programming Language :: Python',
    'Topic :: Security',
    'Topic :: Internet',
]

include = ["pytaxonomies/data/misp-taxonomies/schema.json",
           "pytaxonomies/data/misp-taxonomies/MANIFEST.json",
		   "pytaxonomies/data/misp-taxonomies/*/machinetag.json"]

[tool.poetry.dependencies]
python = "^3.6"
requests = { version = "^2.22.0", optional = true }
flask-nav = {version = "^0.6", optional = true}
Flask = {version = "^1.1.1", optional = true}
Flask-Bootstrap = {version = "^3.3.7", optional = true}
Flask-WTF = {version = "^0.14.3", optional = true}

[tool.poetry.extras]
webui = ["flask-nav", "Flask",  "Flask-Bootstrap", "Flask-WTF"]
remote = ["requests"]

[tool.poetry.dev-dependencies]
coveralls = "^1.11.1"
codecov = "^2.0.15"
jsonschema = "^3.2.0"
nose = "^1.3.7"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


